need to fix login issue to fetch data

--- a/Notebooks/Fundamentals/get_fundamentals_data.ipynb
+++ b/Notebooks/Fundamentals/get_fundamentals_data.ipynb
@@ -53,7 +53,7 @@
       "text/plain": [
        "{'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7',\n",
        " 'user-agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36',\n",
-       " 'cookie': 'csrftoken=CexY9eqPcgb5DCwn6Yys5cz1IHWSZZcz',\n",
+       " 'cookie': 'csrftoken=zMukpWf2vKUr755bxHCtat16Qz8jHoPv',\n",
        " 'content-type': 'application/x-www-form-urlencoded'}"
       ]
      },
@@ -153,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "<RequestsCookieJar[Cookie(version=0, name='csrftoken', value='iJ6MvlweipmSxzRA9mtR1PJk4TgJVgw5', port=None, port_specified=False, domain='www.screener.in', domain_specified=False, domain_initial_dot=False, path='/', path_specified=True, secure=True, expires=1724334958, discard=False, comment=None, comment_url=None, rest={'SameSite': 'Lax'}, rfc2109=False)]>"
+       "<RequestsCookieJar[Cookie(version=0, name='csrftoken', value='q6eSfQBMaMMGdbhA34rPUo7m8ZLu88Om', port=None, port_specified=False, domain='www.screener.in', domain_specified=False, domain_initial_dot=False, path='/', path_specified=True, secure=True, expires=1724402581, discard=False, comment=None, comment_url=None, rest={'SameSite': 'Lax'}, rfc2109=False)]>"
       ]
      },
      "execution_count": 7,
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,8 +252,8 @@
     "        # if 'Face Value' in name_span.text:\n",
     "        #     face_value = fetch_number_span(li)\n",
     "        \n",
-    "        # if 'Return on equity' in name_span.text:\n",
-    "        #     equity_return = fetch_number_span(li) \n",
+    "        if 'Return on equity' in name_span.text:\n",
+    "            equity_return = fetch_number_span(li) \n",
     "            \n",
     "        # if 'Debt to equity' in name_span.text:\n",
     "        #     debt_equity = fetch_number_span(li) \n",
@@ -305,7 +305,7 @@
     "    scrip_data['ROE'] = roe\n",
     "    # scrip_data['Book_Value'] = book_value\n",
     "    # scrip_data['Face_Value'] = face_value\n",
-    "    # scrip_data['Return_on_equity'] = equity_return\n",
+    "    scrip_data['Return_on_equity'] = equity_return\n",
     "    # scrip_data['Debt_to_equity'] = debt_equity\n",
     "    # scrip_data['Promoter_holding'] = promoter_holding\n",
     "    # scrip_data['ROE_10Yr'] = roe_10yr\n",
@@ -325,7 +325,7 @@
     "BASE_URL = 'https://www.screener.in/company/'\n",
     "def fetch_scrip_data(scrip, section_id):\n",
     "    link = f'{BASE_URL}{scrip}/consolidated'\n",
-    "    hdr = {'User-Agent':'Mozilla/5.0','Cookie':'csrftoken=06W1UBXr0mDL59hF0TfYJiSVRLDuBpWn; sessionid=3voj4pnynmx74bjiqwfrw4qersjr3bnc'}\n",
+    "    hdr = {'User-Agent':'Mozilla/5.0','Cookie':'csrftoken=aBzLK9SjsMFB5gGaKe7DyZTfmJaFW9tN; sessionid=begnh82711zxs3231mj7acxo5tk4mcab'}\n",
     "    req = Request(link,headers=hdr)\n",
     "    \n",
     "    table_df = None\n",
@@ -365,33 +365,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scrip_data, profit_loss_df = fetch_scrip_data('TCS', 'profit-loss')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EXCEPTION THROWN: UNABLE TO FETCH DATA\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Price            3389.00\n",
-       "High             3575.00\n",
-       "Low              2926.00\n",
-       "Market_Cap    1239542.00\n",
-       "PE                 28.30\n",
-       "Dividend            1.42\n",
-       "ROCE               59.10\n",
-       "ROE                46.90\n",
-       "dtype: float64"
+       "Series([], dtype: float64)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,17 +872,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Saving Fundamental Table in csv"
+    "# Saving Fundamental Tables in csv"
    ]
   },
   {
@@ -1008,47 +991,6 @@
     "        print(f\"Data saved to {file_name}\")\n",
     "    else:\n",
     "        print(f\"No data available for {scrip} - shareholding\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test(scrip):\n",
-    "    link = f'{BASE_URL}{scrip}/consolidated'\n",
-    "    hdr = {'User-Agent':'Mozilla/5.0','Cookie':'csrftoken=06W1UBXr0mDL59hF0TfYJiSVRLDuBpWn; sessionid=3voj4pnynmx74bjiqwfrw4qersjr3bnc'}\n",
-    "    req = Request(link,headers=hdr)\n",
-    "    \n",
-    "    table_df = None\n",
-    "    scrip_data = pd.Series()\n",
-    "    try:\n",
-    "        page=urlopen(req)\n",
-    "        soup = BeautifulSoup(page)\n",
-    "        # print(soup)\n",
-    "        table_df = extract_table_by_class(soup, 'peers', 'data-table text-nowrap striped mark-visited')\n",
-    "    except:\n",
-    "        print(f'EXCEPTION THROWN: UNABLE TO FETCH DATA')\n",
-    "\n",
-    "    return table_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EXCEPTION THROWN: UNABLE TO FETCH DATA\n"
-     ]
-    }
-   ],
-   "source": [
-    "test('TCS')"
    ]
   },
   {
