Fetched quick ratios data and peers table

--- a/Notebooks/Fundamentals/get_fundamentals_data.ipynb
+++ b/Notebooks/Fundamentals/get_fundamentals_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -53,11 +53,11 @@
       "text/plain": [
        "{'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7',\n",
        " 'user-agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36',\n",
-       " 'cookie': 'csrftoken=zMukpWf2vKUr755bxHCtat16Qz8jHoPv',\n",
+       " 'cookie': 'csrftoken=mb0R6nRQvCkgEhhQkp8QbfQ9YzJFmirE',\n",
        " 'content-type': 'application/x-www-form-urlencoded'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
     "    'password': 'Screener@6562!'\n",
     "}\n",
     "headers = {\n",
-    "  'Cookie': 'csrftoken=QgS5auLp8rXExwxR6Tladmx3gEDa9aOV'\n",
+    "  'Cookie': 'csrftoken=QgS5auLp8rXExwxR6Tladmx3gEDa9aOV; sessionid=cckmtq1phsp4heuk5m122qp9mwbjmy4k'\n",
     "}\n",
     "\n",
     "response = requests.request(\"GET\", url, headers=headers, data=payload)\n"
@@ -153,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "<RequestsCookieJar[Cookie(version=0, name='csrftoken', value='q6eSfQBMaMMGdbhA34rPUo7m8ZLu88Om', port=None, port_specified=False, domain='www.screener.in', domain_specified=False, domain_initial_dot=False, path='/', path_specified=True, secure=True, expires=1724402581, discard=False, comment=None, comment_url=None, rest={'SameSite': 'Lax'}, rfc2109=False)]>"
+       "<RequestsCookieJar[Cookie(version=0, name='csrftoken', value='xEGZOTUVAS09Rag7ZseNxNPSBuOtkt7L', port=None, port_specified=False, domain='www.screener.in', domain_specified=False, domain_initial_dot=False, path='/', path_specified=True, secure=True, expires=1724775945, discard=False, comment=None, comment_url=None, rest={'SameSite': 'Lax'}, rfc2109=False)]>"
       ]
      },
      "execution_count": 7,
@@ -174,10 +174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "BASE_URL = 'https://www.screener.in/company/'\n",
+    "\n",
     "def extract_table_by_class(soup, section_id, class_name):\n",
     "    section_html = soup.find('section',{'id': section_id})\n",
     "    table_html = section_html.find('table',{'class': class_name})\n",
@@ -203,9 +205,11 @@
     "    num_span = num_span.text.replace(',', '')\n",
     "    return float(num_span) if (num_span != '') else 0.0\n",
     "    \n",
-    "def extract_scrip_ratios(soup,div_class, ul_id):\n",
+    "def extract_scrip_ratios(soup, soup1, div_class, ul_id):\n",
     "    div_html = soup.find('div',{'class': div_class})\n",
     "    ul_html = div_html.find('ul',{'id': ul_id})\n",
+    "    # Find all <li> elements in quick-ratios api\n",
+    "    li_html = soup1.findAll('li')\n",
     "    current_price = 0\n",
     "    high = 0.0\n",
     "    low = 0.0\n",
@@ -214,7 +218,23 @@
     "    roe = 0.0\n",
     "    roce = 0.0\n",
     "    market_cap = 0.0\n",
-    "     \n",
+    "    book_value = 0.0\n",
+    "    face_value = 0.0\n",
+    "    equity_return = 0.0\n",
+    "    debt_equity = 0.0\n",
+    "    promoter_holding = 0.0\n",
+    "    roe_10yr = 0.0\n",
+    "    eps = 0.0\n",
+    "    eps_last_year = 0.0\n",
+    "    peg_ratio = 0.0\n",
+    "    eps_preceding_year = 0.0\n",
+    "    debt = 0.0\n",
+    "    prom_hold_change = 0.0\n",
+    "    industy_pe = 0.0\n",
+    "    sales_growth = 0.0\n",
+    "    profit_growth = 0.0\n",
+    "    price_sales = 0.0\n",
+    "    \n",
     "    scrip_data = pd.Series()\n",
     "    \n",
     "    for li in ul_html.find_all(\"li\"):\n",
@@ -246,53 +266,56 @@
     "        if 'ROE' in name_span.text:\n",
     "            roe = fetch_number_span(li) \n",
     "        \n",
-    "        # if 'Book Value' in name_span.text: \n",
-    "        #     book_value = fetch_number_span(li)\n",
+    "        if 'Book Value' in name_span.text: \n",
+    "            book_value = fetch_number_span(li)\n",
     "            \n",
-    "        # if 'Face Value' in name_span.text:\n",
-    "        #     face_value = fetch_number_span(li)\n",
-    "        \n",
+    "        if 'Face Value' in name_span.text:\n",
+    "            face_value = fetch_number_span(li)\n",
+    "\n",
+    "    for li in li_html:\n",
+    "        name_span = li.find('span',{'class':'name'})\n",
+    "\n",
     "        if 'Return on equity' in name_span.text:\n",
     "            equity_return = fetch_number_span(li) \n",
     "            \n",
-    "        # if 'Debt to equity' in name_span.text:\n",
-    "        #     debt_equity = fetch_number_span(li) \n",
+    "        if 'Debt to equity' in name_span.text:\n",
+    "            debt_equity = fetch_number_span(li) \n",
     "            \n",
-    "        # if 'Promoter holding' in name_span.text:\n",
-    "        #     promoter_holding = fetch_number_span(li)\n",
+    "        if 'Promoter holding' in name_span.text:\n",
+    "            promoter_holding = fetch_number_span(li)\n",
     "\n",
-    "        # if 'ROE 10Yr' in name_span.text:\n",
-    "        #     roe_10yr = fetch_number_span(li) \n",
+    "        if 'ROE 10Yr' in name_span.text:\n",
+    "            roe_10yr = fetch_number_span(li) \n",
     "\n",
-    "        # if 'EPS' in name_span.text:\n",
-    "        #     eps = fetch_number_span(li) \n",
+    "        if 'EPS' in name_span.text:\n",
+    "            eps = fetch_number_span(li) \n",
     "\n",
-    "        # if 'EPS last year' in name_span.text:\n",
-    "        #     eps_last_year = fetch_number_span(li) \n",
+    "        if 'EPS last year' in name_span.text:\n",
+    "            eps_last_year = fetch_number_span(li) \n",
     "\n",
-    "        # if 'PEG Ratio' in name_span.text:\n",
-    "        #     peg_ratio = fetch_number_span(li) \n",
+    "        if 'PEG Ratio' in name_span.text:\n",
+    "            peg_ratio = fetch_number_span(li) \n",
     "\n",
-    "        # if 'EPS preceding year' in name_span.text:\n",
-    "        #     eps_preceding_year = fetch_number_span(li) \n",
+    "        if 'EPS preceding year' in name_span.text:\n",
+    "            eps_preceding_year = fetch_number_span(li) \n",
     "\n",
-    "        # if 'Debt' in name_span.text:\n",
-    "        #     debt = fetch_number_span(li) \n",
+    "        if 'Debt' in name_span.text:\n",
+    "            debt = fetch_number_span(li) \n",
     "\n",
-    "        # if 'Change in Prom Hold' in name_span.text:\n",
-    "        #     prom_hold_change = fetch_number_span(li) \n",
+    "        if 'Change in Prom Hold' in name_span.text:\n",
+    "            prom_hold_change = fetch_number_span(li) \n",
     "\n",
-    "        # if 'Industry PE' in name_span.text:\n",
-    "        #     industy_pe = fetch_number_span(li) \n",
+    "        if 'Industry PE' in name_span.text:\n",
+    "            industy_pe = fetch_number_span(li) \n",
     "\n",
-    "        # if 'Sales growth' in name_span.text:\n",
-    "        #     sales_growth = fetch_number_span(li) \n",
+    "        if 'Sales growth' in name_span.text:\n",
+    "            sales_growth = fetch_number_span(li) \n",
     "\n",
-    "        # if 'Profit growth' in name_span.text:\n",
-    "        #     profit_growth = fetch_number_span(li) \n",
+    "        if 'Profit growth' in name_span.text:\n",
+    "            profit_growth = fetch_number_span(li) \n",
     "\n",
-    "        # if 'Price to Sales' in name_span.text:\n",
-    "        #     price_sales = fetch_number_span(li) \n",
+    "        if 'Price to Sales' in name_span.text:\n",
+    "            price_sales = fetch_number_span(li) \n",
     "\n",
     "\n",
     "    scrip_data['Price'] = current_price\n",
@@ -303,38 +326,43 @@
     "    scrip_data['Dividend'] = dividend_yield\n",
     "    scrip_data['ROCE'] = roce\n",
     "    scrip_data['ROE'] = roe\n",
-    "    # scrip_data['Book_Value'] = book_value\n",
-    "    # scrip_data['Face_Value'] = face_value\n",
+    "    scrip_data['Book_Value'] = book_value\n",
+    "    scrip_data['Face_Value'] = face_value\n",
     "    scrip_data['Return_on_equity'] = equity_return\n",
-    "    # scrip_data['Debt_to_equity'] = debt_equity\n",
-    "    # scrip_data['Promoter_holding'] = promoter_holding\n",
-    "    # scrip_data['ROE_10Yr'] = roe_10yr\n",
-    "    # scrip_data['EPS'] = eps\n",
-    "    # scrip_data['EPS_last_year'] = eps_last_year\n",
-    "    # scrip_data['PEG_Ratio'] = peg_ratio\n",
-    "    # scrip_data['EPS_preceding_year'] = eps_preceding_year\n",
-    "    # scrip_data['Debt'] = debt\n",
-    "    # scrip_data['Change_in_Prom_Hold'] = prom_hold_change\n",
-    "    # scrip_data['Industry_PE'] = industy_pe\n",
-    "    # scrip_data['Sales_growth'] = sales_growth\n",
-    "    # scrip_data['Profit_growth'] = profit_growth\n",
-    "    # scrip_data['Price_to_Sales'] = price_sales\n",
+    "    scrip_data['Debt_to_equity'] = debt_equity\n",
+    "    scrip_data['Promoter_holding'] = promoter_holding\n",
+    "    scrip_data['ROE_10Yr'] = roe_10yr\n",
+    "    scrip_data['EPS'] = eps\n",
+    "    scrip_data['EPS_last_year'] = eps_last_year\n",
+    "    scrip_data['PEG_Ratio'] = peg_ratio\n",
+    "    scrip_data['EPS_preceding_year'] = eps_preceding_year\n",
+    "    scrip_data['Debt'] = debt\n",
+    "    scrip_data['Change_in_Prom_Hold'] = prom_hold_change\n",
+    "    scrip_data['Industry_PE'] = industy_pe\n",
+    "    scrip_data['Sales_growth'] = sales_growth\n",
+    "    scrip_data['Profit_growth'] = profit_growth\n",
+    "    scrip_data['Price_to_Sales'] = price_sales\n",
     "    return scrip_data\n",
     "\n",
     "\n",
-    "BASE_URL = 'https://www.screener.in/company/'\n",
     "def fetch_scrip_data(scrip, section_id):\n",
     "    link = f'{BASE_URL}{scrip}/consolidated'\n",
-    "    hdr = {'User-Agent':'Mozilla/5.0','Cookie':'csrftoken=aBzLK9SjsMFB5gGaKe7DyZTfmJaFW9tN; sessionid=begnh82711zxs3231mj7acxo5tk4mcab'}\n",
+    "    hdr = {'User-Agent':'Mozilla/5.0','Cookie':'csrftoken=QgS5auLp8rXExwxR6Tladmx3gEDa9aOV; sessionid=cckmtq1phsp4heuk5m122qp9mwbjmy4k'}\n",
     "    req = Request(link,headers=hdr)\n",
     "    \n",
     "    table_df = None\n",
     "    scrip_data = pd.Series()\n",
     "    try:\n",
     "        page=urlopen(req)\n",
-    "        soup = BeautifulSoup(page)\n",
-    "        # print(soup)\n",
-    "        scrip_data = extract_scrip_ratios(soup,'company-ratios', 'top-ratios')\n",
+    "        soup_consolidated = BeautifulSoup(page)\n",
+    "        company_id = soup_consolidated.find('div',{'id': 'company-info'})['data-warehouse-id'] # fetching company id\n",
+    "\n",
+    "        url = f\"https://www.screener.in/api/company/{company_id}/quick_ratios/\"\n",
+    "        response = requests.request(\"GET\", url, headers=hdr)\n",
+    "        html_data = response.text\n",
+    "        soup_quick_ratio = BeautifulSoup(html_data, 'html.parser')\n",
+    "\n",
+    "        scrip_data = extract_scrip_ratios(soup_consolidated, soup_quick_ratio, 'company-ratios', 'top-ratios')\n",
     "        try:\n",
     "            table_df = extract_table_by_class(soup, section_id, 'data-table responsive-text-nowrap')\n",
     "        except:\n",
@@ -360,28 +388,74 @@
     "    cols = [years[year] for year in years_list]\n",
     "    pl_values = pl_df[cols].iloc[0, :].values.tolist()\n",
     "    pl_values = [float(x.replace(',', '')) for x in pl_values] \n",
-    "    return pl_values"
+    "    return pl_values\n",
+    "\n",
+    "\n",
+    "def fetch_peers_table(scrip):\n",
+    "    link = f'{BASE_URL}{scrip}/consolidated'\n",
+    "    hdr = {'User-Agent':'Mozilla/5.0','Cookie':'csrftoken=QgS5auLp8rXExwxR6Tladmx3gEDa9aOV; sessionid=cckmtq1phsp4heuk5m122qp9mwbjmy4k'}\n",
+    "    req = Request(link,headers=hdr)\n",
+    "    page=urlopen(req)\n",
+    "    soup = BeautifulSoup(page)\n",
+    "    company_id = soup.find('div',{'id': 'company-info'})['data-warehouse-id'] # fetching company id\n",
+    "\n",
+    "    url = f\"https://www.screener.in/api/company/{company_id}/peers/\"\n",
+    "    response = requests.request(\"GET\", url, headers=hdr)\n",
+    "    html_data = response.text\n",
+    "    soup_peers = BeautifulSoup(html_data, 'html.parser')\n",
+    "    table_html = soup_peers.find('table',{'class': \"data-table text-nowrap striped mark-visited\"})\n",
+    "\n",
+    "    headers = []\n",
+    "    for header in table_html.find_all('th'):\n",
+    "        headers.append(  header.text or 'Type')\n",
+    "\n",
+    "    table_df = pd.DataFrame(columns = headers)\n",
+    "\n",
+    "    for row_element in table_html.find_all('tr')[1:]:\n",
+    "            row_data = row_element.find_all('td')\n",
+    "            row = [tr.text.strip() for tr in row_data]\n",
+    "            length = len(table_df)\n",
+    "            table_df.loc[length] = row \n",
+    "            \n",
+    "    return table_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EXCEPTION THROWN: UNABLE TO FETCH DATA\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "Series([], dtype: float64)"
+       "Price                     3376.00\n",
+       "High                      3575.00\n",
+       "Low                       2926.00\n",
+       "Market_Cap             1235552.00\n",
+       "PE                          28.20\n",
+       "Dividend                     1.42\n",
+       "ROCE                        59.10\n",
+       "ROE                         46.90\n",
+       "Book_Value                 247.00\n",
+       "Face_Value                   1.00\n",
+       "Return_on_equity            46.90\n",
+       "Debt_to_equity               0.09\n",
+       "Promoter_holding            72.30\n",
+       "ROE_10Yr                    38.60\n",
+       "EPS                        105.00\n",
+       "EPS_last_year              115.00\n",
+       "PEG_Ratio                    2.71\n",
+       "EPS_preceding_year         105.00\n",
+       "Debt                      7688.00\n",
+       "Change_in_Prom_Hold          0.00\n",
+       "Industry_PE                 27.40\n",
+       "Sales_growth                16.60\n",
+       "Profit_growth               12.80\n",
+       "Price_to_Sales               5.32\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Saving Fundamental Tables in csv"
+    "# Saving Fundamental data Tables in csv"
    ]
   },
   {
@@ -980,6 +1054,7 @@
     }
    ],
    "source": [
+    "# Saving shareholding table\n",
     "for scrip in SCRIPS:\n",
     "    print(f\"\\nSYMBOL: {scrip}\")\n",
     "    scrip_data, df = fetch_scrip_data(scrip, 'shareholding')\n",
@@ -995,10 +1070,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "SYMBOL: INFY\n",
+      "Data saved to Fundamental_data/INFY_peers.csv\n",
+      "\n",
+      "SYMBOL: HCLTECH\n",
+      "Data saved to Fundamental_data/HCLTECH_peers.csv\n",
+      "\n",
+      "SYMBOL: LTIM\n",
+      "Data saved to Fundamental_data/LTIM_peers.csv\n",
+      "\n",
+      "SYMBOL: TCS\n",
+      "Data saved to Fundamental_data/TCS_peers.csv\n",
+      "\n",
+      "SYMBOL: LTTS\n",
+      "Data saved to Fundamental_data/LTTS_peers.csv\n",
+      "\n",
+      "SYMBOL: WIPRO\n",
+      "Data saved to Fundamental_data/WIPRO_peers.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Saving peers comparisons table\n",
+    "for scrip in SCRIPS:\n",
+    "    print(f\"\\nSYMBOL: {scrip}\")\n",
+    "    df = fetch_peers_table(scrip)\n",
+    "    if df is not None:\n",
+    "        # Remove '\\n' and strip leading/trailing spaces from column names\n",
+    "        df.columns = [re.sub(r\"\\s+\", \" \", column, flags=re.UNICODE) for column in df.columns]\n",
+    "        file_name = f\"Fundamental_data/{scrip}_peers.csv\"\n",
+    "        df.to_csv(file_name, index=False)\n",
+    "        print(f\"Data saved to {file_name}\")\n",
+    "    else:\n",
+    "        print(f\"No peers table available for {scrip}\")"
+   ]
   }
  ],
  "metadata": {
