Fetched chart datas

--- a/Notebooks/Fundamentals/get_fundamentals_data.ipynb
+++ b/Notebooks/Fundamentals/get_fundamentals_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,8 @@
     "from time import sleep\n",
     "\n",
     "import re\n",
+    "import json\n",
+    "from pandas.io.json import json_normalize\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,11 +55,11 @@
       "text/plain": [
        "{'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7',\n",
        " 'user-agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36',\n",
-       " 'cookie': 'csrftoken=mb0R6nRQvCkgEhhQkp8QbfQ9YzJFmirE',\n",
+       " 'cookie': 'csrftoken=ngnmc7FePpzY5gbZzbyNVzRklp7VdVf3',\n",
        " 'content-type': 'application/x-www-form-urlencoded'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,18 +357,18 @@
     "    try:\n",
     "        page=urlopen(req)\n",
     "        soup_consolidated = BeautifulSoup(page)\n",
-    "        company_id = soup_consolidated.find('div',{'id': 'company-info'})['data-warehouse-id'] # fetching company id\n",
+    "        warehouse_id = soup_consolidated.find('div',{'id': 'company-info'})['data-warehouse-id'] # fetching warehouse id\n",
     "\n",
-    "        url = f\"https://www.screener.in/api/company/{company_id}/quick_ratios/\"\n",
+    "        url = f\"https://www.screener.in/api/company/{warehouse_id}/quick_ratios/\"\n",
     "        response = requests.request(\"GET\", url, headers=hdr)\n",
     "        html_data = response.text\n",
     "        soup_quick_ratio = BeautifulSoup(html_data, 'html.parser')\n",
     "\n",
     "        scrip_data = extract_scrip_ratios(soup_consolidated, soup_quick_ratio, 'company-ratios', 'top-ratios')\n",
     "        try:\n",
-    "            table_df = extract_table_by_class(soup, section_id, 'data-table responsive-text-nowrap')\n",
+    "            table_df = extract_table_by_class(soup_consolidated, section_id, 'data-table responsive-text-nowrap')\n",
     "        except:\n",
-    "            table_df = extract_table_by_class(soup, section_id, 'data-table')\n",
+    "            table_df = extract_table_by_class(soup_consolidated, section_id, 'data-table')\n",
     "    except:\n",
     "        print(f'EXCEPTION THROWN: UNABLE TO FETCH DATA')\n",
     "\n",
@@ -422,17 +424,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Price                     3376.00\n",
+       "Price                     3390.00\n",
        "High                      3575.00\n",
        "Low                       2926.00\n",
-       "Market_Cap             1235552.00\n",
-       "PE                          28.20\n",
+       "Market_Cap             1240528.00\n",
+       "PE                          28.30\n",
        "Dividend                     1.42\n",
        "ROCE                        59.10\n",
        "ROE                         46.90\n",
@@ -444,18 +446,18 @@
        "ROE_10Yr                    38.60\n",
        "EPS                        105.00\n",
        "EPS_last_year              115.00\n",
-       "PEG_Ratio                    2.71\n",
+       "PEG_Ratio                    2.72\n",
        "EPS_preceding_year         105.00\n",
        "Debt                      7688.00\n",
        "Change_in_Prom_Hold          0.00\n",
        "Industry_PE                 27.40\n",
        "Sales_growth                16.60\n",
        "Profit_growth               12.80\n",
-       "Price_to_Sales               5.32\n",
+       "Price_to_Sales               5.35\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1106,7 @@
     "    print(f\"\\nSYMBOL: {scrip}\")\n",
     "    df = fetch_peers_table(scrip)\n",
     "    if df is not None:\n",
-    "        # Remove '\\n' and strip leading/trailing spaces from column names\n",
+    "        # Remove '\\n' and ALL spaces in a string, even between words\n",
     "        df.columns = [re.sub(r\"\\s+\", \" \", column, flags=re.UNICODE) for column in df.columns]\n",
     "        file_name = f\"Fundamental_data/{scrip}_peers.csv\"\n",
     "        df.to_csv(file_name, index=False)\n",
@@ -1112,6 +1114,230 @@
     "    else:\n",
     "        print(f\"No peers table available for {scrip}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fetching chart values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_URL = 'https://www.screener.in/company/'\n",
+    "def fetch_price_chart_data(scrip, days, options):\n",
+    "    link = f'{BASE_URL}{scrip}/consolidated'\n",
+    "    hdr = {'User-Agent':'Mozilla/5.0','Cookie':'csrftoken=QgS5auLp8rXExwxR6Tladmx3gEDa9aOV; sessionid=cckmtq1phsp4heuk5m122qp9mwbjmy4k'}\n",
+    "    req = Request(link,headers=hdr)\n",
+    "    page=urlopen(req)\n",
+    "    soup = BeautifulSoup(page)\n",
+    "    company_id = soup.find('div',{'id': 'company-info'})['data-company-id'] # fetching company id\n",
+    "    url = f\"https://www.screener.in/api/company/{company_id}/chart/?q={options}&days={days}&consolidated=true\"\n",
+    "    response = requests.request(\"GET\", url, headers=hdr)\n",
+    "    json_data = response.json()\n",
+    "    df = json_normalize(json_data['datasets'])\n",
+    "    \n",
+    "    # Create an empty DataFrame to store the reshaped data\n",
+    "    reshaped_data = {}\n",
+    "\n",
+    "    # Iterate through each row in the original DataFrame\n",
+    "    for row in df.itertuples():\n",
+    "        label = row.label\n",
+    "        values = row.values\n",
+    "        \n",
+    "        # Iterate through the list of date-value pairs in the \"values\" column\n",
+    "        for item in values:\n",
+    "            date = item[0]\n",
+    "            value = item[1] if len(item) > 1 else None\n",
+    "            # If the date is not in the reshaped_data dictionary, create a new entry\n",
+    "            if date not in reshaped_data:\n",
+    "                reshaped_data[date] = {}\n",
+    "            \n",
+    "            # Add the value to the corresponding label in the dictionary\n",
+    "            reshaped_data[date][label] = value\n",
+    "\n",
+    "    # Create the reshaped DataFrame from the dictionary\n",
+    "    reshaped_df = pd.DataFrame.from_dict(reshaped_data, orient='index')\n",
+    "\n",
+    "    # Set the index name to \"Date\"\n",
+    "    reshaped_df.index.name = \"Date\"\n",
+    "\n",
+    "    # Sort the index\n",
+    "    reshaped_df.sort_index(inplace=True)\n",
+    "\n",
+    "    # Display the new DataFrame\n",
+    "    return reshaped_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options = {'Price' : 'Price-DMA50-DMA200-Volume',\n",
+    "        'PE Ratio' : 'Price+to+Earning-Median+PE-EPS',\n",
+    "        'Market Cap / Sales': 'Market+Cap+to+Sales-Median+Market+Cap+to+Sales-Sales',\n",
+    "        'Sales & Margin' : 'GPM-OPM-NPM-Quarter+Sales',\n",
+    "        'EV / EBITDA' : 'EV+Multiple-Median+EV+Multiple-EBITDA',\n",
+    "        'Price to Book' : 'Price+to+book+value-Median+PBV-Book+value'}\n",
+    "\n",
+    "days = {'1m' : 30,\n",
+    "        '6m' : 180,\n",
+    "        '1Yr' : 365,\n",
+    "        '3Yr' : 1095,\n",
+    "        '5Yr' : 1825,\n",
+    "        '10Yr' : 3652,\n",
+    "        'Max' : 10000}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TTM EPS</th>\n",
+       "      <th>PE</th>\n",
+       "      <th>Median PE = 29.0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-08-31</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.2</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-09-07</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-09-14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-09-21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.6</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-09-28</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-04</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.9</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-18</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-25</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-30</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.4</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>280 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            TTM EPS    PE Median PE = 29.0\n",
+       "Date                                      \n",
+       "2018-08-31      NaN  29.2             29.0\n",
+       "2018-09-07      NaN  29.2              NaN\n",
+       "2018-09-14      NaN  29.1              NaN\n",
+       "2018-09-21      NaN  29.6              NaN\n",
+       "2018-09-28      NaN  30.7              NaN\n",
+       "...             ...   ...              ...\n",
+       "2023-08-04      NaN  28.8              NaN\n",
+       "2023-08-11      NaN  28.9              NaN\n",
+       "2023-08-18      NaN  28.2              NaN\n",
+       "2023-08-25      NaN  28.3              NaN\n",
+       "2023-08-30      NaN  28.4             29.0\n",
+       "\n",
+       "[280 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = fetch_price_chart_data('TCS', days['5Yr'], options['PE Ratio'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
