Fetched chart datas

--- a/Notebooks/Fundamentals/get_fundamentals_data.ipynb
+++ b/Notebooks/Fundamentals/get_fundamentals_data.ipynb
@@ -1119,7 +1119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fetching chart values"
+    "## Fetching chart datas"
    ]
   },
   {
